versioned_docs/version-6.0.0/api/2_capi/group/addgroupmember.md
# AddGroupMember

Add a member to the group. Optional parameters: jsonAttributes.

<PartialServop service_name="group" operation_name="ADD_MEMBER_TO_GROUP" />

## Method Parameters
Parameter | Description
--------- | -----------
groupId | ID of the group
profileId | Profile ID of the member being added
role | Role of the member being added
jsonAttributes | Attributes of the member being added

## Usage

```mdx-code-block
<BrowserWindow>
<Tabs>
<TabItem value="csharp" label="C#">
```

```csharp
string groupId = <%= data.example.groupId %>;
string profileId = <%= data.example.profileId %>;
BrainCloudGroup.Role role = BrainCloudGroup.Role.MEMBER;
string jsonAttributes = <%= data.example.jsonAttributes %>;

SuccessCallback successCallback = (response, cbObject) =>
{
    Debug.Log(string.Format("[AddGroupMember Success] {0}", response));
};
FailureCallback failureCallback = (status, code, error, cbObject) =>
{
    Debug.Log(string.Format("Failed | {0}  {1}  {2}", status, code, error));
};

<%= data.branding.codePrefix %>.GroupService.AddGroupMember(
    groupId,
    profileId,
    role,
    jsonAttributes,
    successCallback,
    failureCallback);
```

```mdx-code-block
</TabItem>
<TabItem value="cpp" label="C++">
```

```cpp
const char* groupId = <%= data.example.groupId %>;
const char* profileId = <%= data.example.profileId %>;
eGroupMember::Role role = eGroupMember::MEMBER;
std::string jsonAttributes = <%= data.example.jsonAttributes %>;

<%= data.branding.codeClient %>->getGroupService()->addGroupMember(groupId, profileId, role, jsonAttributes, this);
```

```mdx-code-block
</TabItem>
<TabItem value="objectivec" label="Obj-C">
```

```objectivec
NSString * groupId = @<%= data.example.groupId %>;
NSString * profileId = @<%= data.example.profileId %>;
GroupMemberRole role = MEMBER;
NSString * jsonAttributes = @<%= data.example.jsonAttributes %>;
BCCompletionBlock successBlock;      // define callback
BCErrorCompletionBlock failureBlock; // define callback

[[<%= data.branding.codePrefix %> groupService]
         addGroupMember:groupId
              profileId:profileId
                   role:role
         jsonAttributes:jsonAttributes
        completionBlock:successBlock
  errorCompletionBlock:failureBlock
                  cbObject:nil];
```

```mdx-code-block
</TabItem>
<TabItem value="java" label="Java">
```

```java
String groupId = <%= data.example.groupId %>;
String profileId = <%= data.example.profileId %>;
GroupService.Role role = GroupService.Role.MEMBER;
String jsonAttributes = <%= data.example.jsonAttributes %>;
<%= data.example.implementCallback %>

<%= data.branding.codePrefix %>.getGroupService().addGroupMember(groupId, profileId, role, jsonAttributes, this);
```

```mdx-code-block
</TabItem>
<TabItem value="js" label="JavaScript">
```

```javascript
var groupId = <%= data.example.groupId %>;
var profileId = <%= data.example.profileId %>;
var role = "MEMBER";
var jsonAttributes = <%= data.example.jsonAttributes_js %>;

<%= data.branding.codePrefix %>.group.addGroupMember(groupId, profileId, role, attributes, result =>
{
    var status = result.status;
    console.log(status + " : " + JSON.stringify(result, null, 2));
});
```

```mdx-code-block
</TabItem>
<TabItem value="dart" label="Dart">
```

```dart
var  groupId = <%= data.example.groupId %>;
var  profileId = <%= data.example.profileId %>;
var  role = "MEMBER";
var  jsonAttributes = <%= data.example.jsonAttributes_js %>;

ServerResponse result = await <%= data.branding.codePrefix %>.groupService.addGroupMember(groupId:groupId, profileId:profileId, role:role, attributes:attributes);

if (result.statusCode == 200) {
    print("Success");
} else {
    print("Failed ${result.error['status_message'] ?? result.error}");
}
```

```mdx-code-block
</TabItem>
<TabItem value="roblox" label="Roblox">
```

```lua
local groupId = <%= data.example.groupId %>
local profileId = <%= data.example.profileId %>
local role = "MEMBER"
local jsonAttributes = <%= data.example.jsonAttributes_js %>

local callback = function(result)
    if result.statusCode == 200 then
        print("Success")
    else
        print("Failed | " .. tostring(result.status))
    end
end

<%= data.branding.codePrefix %>:getGroupService():addGroupMember(groupId, profileId, role, attributes, callback)
```

```mdx-code-block
</TabItem>
<TabItem value="gdscript" label="GDScript">
```

```gdscript
var group_id = <%= data.example.groupId %>
var profile_id = <%= data.example.profileId %>
var role = "MEMBER"
var json_attributes = <%= data.example.jsonAttributes_js %>

var result = await <%= data.branding.codePrefix %>.group_service.add_group_member(group_id, profile_id, role, attributes)

if result.status == 200:
	print("Success")
else:
	print("Failed: %s" % result.status_message)
```

```mdx-code-block
</TabItem>
<TabItem value="cfs" label="Cloud Code">
```

```cfscript
var groupId = <%= data.example.groupId %>;
var profileId = <%= data.example.profileId %>;
var role = "MEMBER";
var jsonAttributes = <%= data.example.jsonAttributes_js %>;

var groupProxy = bridge.getGroupServiceProxy();
var retVal = groupProxy.addGroupMember(groupId, profileId, role, jsonAttributes);
```

```mdx-code-block
</TabItem>
<TabItem value="r" label="Raw">
```

```r
{
  "groupId": "a-group-id",
  "profileId": "a-profile-id",
  "role": "MEMBER",
  "attributes": {}
}
```

```mdx-code-block
</TabItem>
</Tabs>
</BrowserWindow>
```

<details>
<summary>JSON Response</summary>

```json
{
    "status": 200,
    "data": null
}
```
</details>

